--- a/Extras Trabalho Quatro/ConversaoDecimalBinario.ipynb
+++ b/Extras Trabalho Quatro/ConversaoDecimalBinario.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# <center>DECIMAL PARA BINÁRIO<center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### O código funcina da seguinte maneira: Ao inserir um número decimal, esse valor que será capturado será colocando dentro de um while, esse while terá como condição d != 1, fazendo sucessivas divisisões inteiras e uma string b capturará todos os resultados, no fim essa string terá seus valores invertidos em um for e por fim será imprimido a conversão correta."
    ]
   },
