--- a/Extras Trabalho Quatro/ConversaoHexOctBinDec.ipynb
+++ b/Extras Trabalho Quatro/ConversaoHexOctBinDec.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# <center>CONVERSÃO DE BASES NÚMERICAS<center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Pedindo número e tipo de conversão"
    ]
   },
