--- a/Extras Trabalho Quatro/QuantizaçãoDeBitsSimples.ipynb
+++ b/Extras Trabalho Quatro/QuantizaçãoDeBitsSimples.ipynb
@@ -23,24 +23,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Digite os niveis de quantização:0\n",
-      "O número de bits para o nível:  1\n",
-      "Digite os niveis de quantização:1\n",
-      "O número de bits para o nível:  2\n",
-      "Digite os niveis de quantização:2\n",
-      "O número de bits para o nível:  1\n",
-      "Digite os niveis de quantização:4\n",
-      "O número de bits para o nível:  2\n",
       "Digite os niveis de quantização:8\n",
-      "O número de bits para o nível:  3\n",
+      "O número de bits:  3\n",
+      "Possibilidades:\n",
+      "000\n",
+      "001\n",
+      "010\n",
+      "011\n",
+      "100\n",
+      "101\n",
+      "110\n",
+      "111\n",
       "Digite os niveis de quantização:16\n",
-      "O número de bits para o nível:  4\n",
-      "Digite os niveis de quantização:32\n",
-      "O número de bits para o nível:  5\n",
-      "Digite os niveis de quantização:64\n",
-      "O número de bits para o nível:  6\n",
-      "Digite os niveis de quantização:128\n",
-      "O número de bits para o nível:  7\n"
+      "O número de bits:  4\n",
+      "Possibilidades:\n",
+      "0000\n",
+      "0001\n",
+      "0010\n",
+      "0011\n",
+      "0100\n",
+      "0101\n",
+      "0110\n",
+      "0111\n",
+      "1000\n",
+      "1001\n",
+      "1010\n",
+      "1011\n",
+      "1100\n",
+      "1101\n",
+      "1110\n",
+      "1111\n"
      ]
     }
    ],
@@ -48,19 +60,27 @@
     "while True:\n",
     "    nbits = 0\n",
     "    niveis = int(input('Digite os niveis de quantização:'))\n",
+    "    q = niveis\n",
+    "    v = \"\"\n",
     "    if niveis < 0:\n",
     "        print(\"Números negativos não são permitidos\")\n",
     "    elif niveis == 0:\n",
-    "        nbits = 1\n",
-    "        print(\"O número de bits para o nível: \", nbits )\n",
+    "        print(\"Vazio\" )\n",
     "    elif niveis == 1:\n",
-    "        nbits = 2\n",
-    "        print(\"O número de bits para o nível: \", nbits )\n",
+    "        nbits = 0\n",
+    "        print(\"O número de bits: \", nbits )\n",
+    "    elif niveis == 2:\n",
+    "        nbits = 1\n",
+    "        print(\"O número de bits: \", nbits )   \n",
     "    elif niveis%2 == 0:\n",
     "        while (niveis>1):\n",
     "            niveis = niveis/2\n",
     "            nbits = (nbits + 1)\n",
-    "        print(\"O número de bits para o nível: \", nbits )"
+    "        print(\"O número de bits: \", nbits )\n",
+    "        print(\"Possibilidades:\")\n",
+    "    for i in range(2 ** nbits):\n",
+    "        print(f'{i:0{nbits}b}')\n",
+    "            "
    ]
   },
   {
