--- a/Extras Trabalho Quatro/ConversaoHexOctBinDec.ipynb
+++ b/Extras Trabalho Quatro/ConversaoHexOctBinDec.ipynb
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Digite um número:57\n"
+      "Digite um número:47\n"
      ]
     }
    ],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -50,8 +50,10 @@
       "[4] Hex -> Decimal\n",
       "[5] Binário -> Octal\n",
       "[6] Binário -> Hex\n",
+      "[7] Decimal para Octal\n",
+      "[8] Decimal para Hex\n",
       "\n",
-      "Digite uma das opções acima:1\n"
+      "Digite uma das opções acima:8\n"
      ]
     }
    ],
@@ -62,6 +64,8 @@
     "[4] Hex -> Decimal\n",
     "[5] Binário -> Octal\n",
     "[6] Binário -> Hex\n",
+    "[7] Decimal para Octal\n",
+    "[8] Decimal para Hex\n",
     "''')\n",
     "opcao = int(input(\"Digite uma das opções acima:\"))"
    ]
@@ -75,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +217,34 @@
     "            h = h + \"E\"\n",
     "        if(x[i] == \"1111\"):\n",
     "            h = h + \"F\"\n",
-    "    return (h)"
+    "    return (h)\n",
+    "def DecimalBinario (int, d):\n",
+    "    resposta =\"\"\n",
+    "    b = \"\"\n",
+    "    if d < 0:\n",
+    "        return(\"Número inválido, pois é negativo!\")\n",
+    "    elif d  == 0:\n",
+    "        b = \"0\"\n",
+    "        return b\n",
+    "    elif d == 1:\n",
+    "        b = \"1\"\n",
+    "        return b\n",
+    "    elif d  == 2:\n",
+    "        b = \"010\"\n",
+    "        return b\n",
+    "    elif d == 3:\n",
+    "        b = \"011\"\n",
+    "        return b\n",
+    "    elif d >= 4:\n",
+    "        while d != 1:\n",
+    "            b = b+str(d%2)\n",
+    "            d = d//2\n",
+    "            if d//2 == 1:\n",
+    "                b = b+str(d%2)+str(d//2)\n",
+    "                break\n",
+    "        for i in range(len(b)-1, - 1, -1):\n",
+    "            resposta += b[i]\n",
+    "    return resposta"
    ]
   },
   {
@@ -225,42 +256,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "101111\n"
+      "Hex: 2F\n"
      ]
     }
    ],
    "source": [
     "if opcao == 1:\n",
-    "    print(OctalParaBinario(n))\n",
+    "    print(\"Binário:\",OctalParaBinario(n))\n",
     "elif opcao == 2:\n",
-    "    print(HexParaBinario(n))\n",
+    "    print(\"Binário:\",HexParaBinario(n))\n",
     "elif opcao == 3:\n",
-    "    print(octalDecimal(n))\n",
+    "    print(\"Decimal:\",octalDecimal(n))\n",
     "elif opcao == 4:\n",
-    "    print(hexDecimal(n))\n",
+    "    print(\"Decimal:\",hexDecimal(n))\n",
     "elif opcao == 5:\n",
     "    b = separaBin(n, 3)\n",
-    "    print(binOctal(b))\n",
+    "    print(\"Octal:\",binOctal(b))\n",
     "elif opcao == 6:\n",
     "    b = separaBin(n, 4)\n",
-    "    print(binHex(b))\n",
+    "    print(\"Hex:\",binHex(b))\n",
+    "elif opcao == 7:\n",
+    "    b = DecimalBinario(int, int(n))\n",
+    "    b = separaBin(b,3)\n",
+    "    print(\"Octal:\",binOctal(b))\n",
+    "elif opcao == 8:\n",
+    "    b = DecimalBinario(int, int(n))\n",
+    "    b = separaBin(b,4)\n",
+    "    print(\"Hex:\",binHex(b))\n",
     "else:\n",
     "    print(\"Opção inválida\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
